find valid combinations